--- a/app/src/main/res/layout/activity_segunda_revision_insertar.xml
+++ b/app/src/main/res/layout/activity_segunda_revision_insertar.xml
@@ -1,9 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SegundaRevisionInsertarActivity">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="30dip"
+    android:stretchColumns="1" >
+    <TableRow>
+        <TextView android:text="@string/NumeroEvaluacion"/>
+        <EditText
+            android:id="@+id/editNumEva"
+            android:inputType="text"
+            android:maxLength="7"
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
+    </TableRow>
+    <TableRow>
+        <TextView android:text="@string/carnet" />
+        <EditText
+            android:id="@+id/editCarnet"
+            android:inputType="text"
+            android:maxLength="30"
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
+    </TableRow>
+    <TableRow>
+        <TextView android:text="@string/idDocente" />
+        <EditText
+            android:id="@+id/editIdDocente"
+            android:inputType="text"
+            android:maxLength="30"
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
+    </TableRow>
+    <TableRow>
+        <TextView android:text="@string/idDocente" />
+        <EditText
+            android:id="@+id/editIdOtroDocente"
+            android:inputType="text"
+            android:maxLength="30"
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
+    </TableRow>
+    <TableRow>
+        <TextView android:text="@string/idRespuesta" />
+        <EditText
+            android:id="@+id/editrespSociedadEstud"
+            android:inputType="text"
+            android:maxLength="30"
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
+    </TableRow>
+    <TableRow>
+        <TextView android:text="@string/nota" />
+        <EditText
+            android:id="@+id/editNotaDefinitiva"
+            android:inputType="text"
+            android:maxLength="30"
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
+    </TableRow>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TableRow>
+        <TextView android:text="@string/opciones" />
+    </TableRow>
+
+    <TableRow>
+        <Button
+            android:onClick="insertarSegundaRevision"
+            android:text="@string/insertar"
+            style="?android:attr/buttonBarButtonStyle" />
+
+        <Button
+            android:onClick="limpiarTexto"
+            android:text="@string/limpiar"
+            style="?android:attr/buttonBarButtonStyle" />
+    </TableRow>
+</TableLayout>
