--- a/app/src/main/res/layout/activity_solicitud_de_impresiones_actualizar.xml
+++ b/app/src/main/res/layout/activity_solicitud_de_impresiones_actualizar.xml
@@ -1,9 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SolicitudDeImpresionesActualizarActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="30dip"
+    android:stretchColumns="1" >
+    <TableRow>
+        <TextView android:text="Id Solicitud"/>
+        <EditText
+            android:id="@+id/edtIdSolicitud"
+            android:inputType="text"
+            android:maxLength="7" />
+    </TableRow>
+    <TableRow>
+        <TextView android:text="Numero de paginas" />
+        <EditText
+            android:id="@+id/edtNumPaginas"
+            android:inputType="text"
+            android:maxLength="7" />
+    </TableRow>
+    <TableRow>
+        <TextView android:text="Estado aprobado" />
+        <EditText
+            android:id="@+id/edtEstadoAprobado"
+            android:inputType="text"
+            android:maxLength="2" />
+    </TableRow>
+    <TableRow>
+        <Button
+            android:onClick="actualizarSolicitudDeImpresion"
+            android:text="actualizar" />
+        <Button
+            android:onClick="limpiarTexto"
+            android:text="limpiar" />
+    </TableRow>
+</TableLayout>
